--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ android {
 dependencies {
     api fileTree(dir: "libs", include: ['*.jar', '*.aar'])
 
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.31"
+    implementation 'androidx.core:core-ktx:1.6.0'
 
     implementation 'org.nanohttpd:nanohttpd:2.3.1'
     implementation 'com.google.zxing:core:3.3.0'
