--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,18 +1,11 @@
 name: Test Build
 
 on:
-  schedule:
-    - cron: 0 13 1 * *
+#  push:
+#    branches:
+#      - main
+#  pull_request:
   workflow_dispatch:
-    inputs:
-      rebuild:
-        description: '忽略构建记录以重新构建'
-        required: false
-        type: boolean
-      donotpublish:
-        description: '构建后不提交发布新版'
-        required: false
-        type: boolean
 
 jobs:
   build:
